--- a/styles/sass/views/_768.sass
+++ b/styles/sass/views/_768.sass
@@ -221,8 +221,8 @@ footer
 						display: block
 						
 				.arrow
-					top: 35%
-					left: -10%
+					top: 40%
+					left: -15px
 					display: block
 				.arrow-down
 					display: none
